--- a/1_cse4.ipynb
+++ b/1_cse4.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN9Ww5UI6UcfLPJRRB5rsYi",
+      "authorship_tag": "ABX9TyNnxWXEcGEZz75VzciuqopM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -47,6 +47,38 @@
       ],
       "source": [
         "print(\"emon\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a=5\n",
+        "a"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "id": "O1xPBXvY2sL3",
+        "outputId": "79e2cafc-4b37-49b6-eeef-f09c450a8279"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
+              "5"
+            ],
+            "text/markdown": "5",
+            "text/latex": "5",
+            "text/plain": [
+              "[1] 5"
+            ]
+          },
+          "metadata": {}
+        }
       ]
     }
   ]
